<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Waterloo Food Menu</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_section1">Menus</string>
    <string name="title_section2">Today\'s Hours</string>
    <string name="title_section3">Today\'s Hours</string>
    <string name="title_section4">Crash</string>

    <!-- These are locations that provide menus -->
    <string name="dc_caf">Davis Centre - (Bon Appetit)</string>
    <string name="v1_caf">Village 1 - (Mudie\'s)</string>
    <string name="rev_caf">REV - (REVelation)</string>
    <string name="sch_caf">SCH - (Festival Fare)</string>
    <string name="hh_caf">Hagey Hall - (Liquit Assets Cafe)</string>
    <string name="pas_caf">PAS Lounge</string>
    <string name="bcm_caf">B. C. Matthew\'s Hall - (Pastry Plus)</string>
    <string name="nh_caf">Needles Hall - (Pastry Plus)</string>

    <!-- These are locations without menus -->
    <string name="dp_caf">Dana Porter - (Browsers Cafe)</string>
    <string name="slc_caf">SLC - (Brubakers)</string>
    <string name="slc_subway">SLC - (Subway)</string>
    <string name="ceit_caf">CEIT - (CEIT Cafe)</string>
    <string name="opt_caf">Optometry - (Eye Opener Cafe)</string>
    <string name="ml_caf">Modern Languages - (Coffee Shop)</string>
    <string name="th_dc">Tim Hortons (D.C.)</string>
    <string name="th_dc2">Tim Hortons (D.C. Express)</string>
    <string name="th_ml">Tim Hortons (ML)</string>
    <string name="th_sch">Tim Hortons (SCH)</string>
    <string name="th_slc">Tim Hortons (SLC)</string>
    <string name="e3_caf">Environment 3 - (Williams Cafe)</string>
    <string name="tc_caf">Tatham Centre - (Pastry Plus)</string>

    <!-- Days of the Week -->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday&#160;&#160;&#160;&#160;</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!-- Other -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="caf_hours_operation">Today\'s Hours of Operation</string>
    <string name="defaultTextView">No data</string>
    <string name="hours_operation">Today\'s Hours of Operation</string>
    <string name="title_activity_return_menus">ReturnMenus</string>
    <string name="hello_world">Hello world!</string>

</resources>